<resources>
    <string name="app_name">Tip Time</string>
    <string name="custo_de_servico">Custo de servico</string>
    <string name="como_foi_o_servico">Como foi o servico?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="calculate">Calcular</string>
    <string name="tip_amount">Resultado</string>
</resources>